# tinystring

./: .Rbuildignore  .gitignore  CMakeLists.txt  DESCRIPTION  NAMESPACE  README.Rmd  README.md
R/: alphabet.R  c.R  cpp11.R  flatten.R  gather.R  length-string.R  length.R  pack.R  recode.R  sub.R  tinystring-package.R  v_functions.R
inst/: demo.R
inst/include/: tinystring_types.h
inst/include/tinystring/: Alphabet.h  AlphabetSimple.h  TinyString.h  TinyStrings.h  const.h
inst/include/tinystring/regex/: Graph.h  Rule.h  State.h  epsilon.h  matchers.h
man/: length.tstr.Rd  tinystring-package.Rd  tstr_c.Rd  tstr_flatten.Rd  tstr_gather.Rd  tstr_length.Rd  tstr_pack.Rd  tstr_recode.Rd  tstr_sub.Rd  tstr_unpack.Rd
src/: Alphabet.h  AlphabetSimple.cpp  AlphabetSimple.h  TinyString.h  TinyStrings.cpp  TinyStrings.h  alphabet.cpp  code.cpp  const.h  cpp11.cpp  null_pointer.cpp  pack.cpp  r_alphabet.cpp  r_c.cpp  r_flatten.cpp  r_length.cpp  r_match.cpp  r_pack.cpp  r_recode.cpp  r_sub.cpp  r_unpack.cpp
tests/: testthat.R
tests/testthat/: test-alphabet.R  test-c.R  test-flatten.R  test-length-string.R  test-length.R  test-recode.R  test-sub.R
